# Cellan

./: .gitignore  README.md  pyproject.toml
Cellan/: __main__.py  analyzer.py  detector.py  gui.py  tools.py
Cellan/detectron2/checkpoint/: catalog.py
